objects/Formation__c.object
<CustomObject>
    <fields>
        <fullName>Commentaire__c</fullName>
        <label>Commentaire</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Formations</relationshipLabel>
        <relationshipName>Formations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Etablissement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Etablissement</label>
        <referenceTo>Etablissement__c</referenceTo>
        <relationshipLabel>Formations</relationshipLabel>
        <relationshipName>Formations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Numero_de_Formation__c</fullName>
        <label>Numero de Formation</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titre__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Titre</label>
        <referenceTo>Titre__c</referenceTo>
        <relationshipLabel>Formations</relationshipLabel>
        <relationshipName>Formations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_de_formation__c</fullName>
        <label>Type de formation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Antérieure</fullName>
                </value>
                <value>
                    <fullName>Postérieure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Formation</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>